--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -65,7 +65,17 @@ $color: rgba(125,43,196,1);
                 .toggle-btn{
                     display: block;
                 }
+                .dropdown_menu{
+                    display: block;
+                }
             }
+            @media (max-width: 576px) {
+                .dropdown_menu{
+                    left: 2rem;
+                    width: unset;
+                }
+            }
+
         }
         .dropdown_menu{
             position: absolute;
@@ -73,9 +83,8 @@ $color: rgba(125,43,196,1);
             top: 60px;
             width: 300px;
             overflow: hidden;
-            // height: 0;
-            display: none;
-            transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            height: 0;
+            transition: height 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             li{
                 padding: 0.7rem;
                 display: flex;
@@ -85,10 +94,12 @@ $color: rgba(125,43,196,1);
         }
         
     }
+    .d{
+        background-color: aqua;
+    }
    
 
 }
 .open{
-    display: block;
-    // height: 240px;
+    height: 240px !important;
 }
