--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,72 +1,63 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .main-content {
   width: 100%;
-  height: 200vh;
+  height: 130vh;
   background-image: url(../medias/gradient.webp);
   background-size: cover;
 }
-
+@media (max-width: 768px) {
+  .main-content {
+    height: 200vh;
+  }
+}
 .main-content li {
   list-style: none;
 }
-
 .main-content li a:hover {
-  color: #7d2bc4;
+  color: rgb(125, 43, 196);
 }
-
 .main-content a {
   color: #fff;
   text-decoration: none;
   font-size: 1rem;
   font-family: HelveticaNeue, Helvetica Neue, helvetica, Sans-Serif;
 }
-
 .main-content a i {
   color: #fff;
   font-size: 25px;
 }
-
 .main-content header {
   position: relative;
   padding: 0 2 rem;
 }
-
 .main-content header .menu-bar {
   width: 100%;
   height: 60px;
   max-width: 1200px;
   margin: 0 auto;
 }
-
 .main-content header .menu-bar .logo {
   font-size: 1.5rem;
 }
-
 .main-content header .menu-bar .logo a {
   font-size: 25px;
   font-family: HelveticaNeue, Helvetica Neue, helvetica, Sans-Serif;
 }
-
 .main-content header .menu-bar .links ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 2rem;
 }
-
 .main-content header .menu-bar .toggle-btn {
   color: #fff;
   font-size: 1.5rem;
   cursor: pointer;
   display: none;
 }
-
 @media (max-width: 992px) {
   .main-content header .menu-bar .links, .main-content header .menu-bar .action-btn {
     display: none;
@@ -78,14 +69,12 @@
     display: block;
   }
 }
-
 @media (max-width: 576px) {
   .main-content header .menu-bar .dropdown_menu {
     left: 2rem;
     width: unset;
   }
 }
-
 .main-content header .dropdown_menu {
   position: absolute;
   right: 2rem;
@@ -93,46 +82,41 @@
   width: 300px;
   overflow: hidden;
   height: 0;
-  -webkit-transition: height 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   transition: height 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-
 .main-content header .dropdown_menu li {
   padding: 0.7rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
-
-.main-content #brand {
+.main-content .content {
+  height: 110vh;
+  color: white;
+  font-family: "Nanum Gothic", sans-serif;
+  font-family: "Raleway", sans-serif;
+}
+.main-content .content #brand {
   font-size: 5rem;
 }
-
+.main-content .content button {
+  padding: 10px 50px 10px 50px;
+}
 .main-content .action-btn {
-  background-color: #7d2bc4;
+  background-color: rgb(125, 43, 196);
   border-radius: 30px;
   color: #fff;
   padding: 5px 30px 5px 30px;
-  -webkit-box-shadow: 2px 2px 15px 3px #7d2bc4;
-          box-shadow: 2px 2px 15px 3px #7d2bc4;
+  box-shadow: 2px 2px 15px 3px rgb(125, 43, 196);
 }
-
 .main-content .action-btn:hover {
   background-color: #fff;
   color: black;
 }
-
-.main-content .d {
-  background-color: aqua;
+.main-content .product img {
+  width: 100%;
 }
 
 .open {
   height: 240px !important;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
