--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,9 +8,14 @@ $color: rgba(125,43,196,1);
 }
 .main-content{
     width: 100% ;
-    height: 200vh;
+    height: 130vh;
     background-image: url(../medias/gradient.webp);
     background-size: cover;
+    @media (max-width: 768px) {
+        &{
+            height: 200vh;
+        }
+    }
     li{
         list-style: none;
         a:hover{
@@ -89,9 +94,24 @@ $color: rgba(125,43,196,1);
         }
         
     }
-    #brand{
-        font-size: 5rem;
+    .content{
+        height: 110vh;
+        color: white;
+        font-family: 'Nanum Gothic', sans-serif;
+        font-family: 'Raleway', sans-serif;
+        #brand{
+            font-size: 5rem;
+            // @media (max-width: 576px) {
+            //     .dropdown_menu{
+            //         left: 2rem;
+            //         width: unset;
+            //     }
+            // }
+        }
+        button{
+            padding: 10px 50px 10px 50px;        }
     }
+    
     .action-btn{
         background-color: $color ;
         border-radius: 30px;
@@ -105,9 +125,12 @@ $color: rgba(125,43,196,1);
         }
 
     }
-    .d{
-        background-color: aqua;
+    .product{
+        img{
+            width: 100%;
+        }
     }
+    
    
 
 }
