--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 }
 @media (max-width: 768px) {
   .main-content {
-    height: 200vh;
+    height: 150vh;
   }
 }
 .main-content li {
@@ -83,6 +83,8 @@
   overflow: hidden;
   height: 0;
   transition: height 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  background-color: rgb(48, 48, 48);
+  border-radius: 10px;
 }
 .main-content header .dropdown_menu li {
   padding: 0.7rem;
@@ -98,6 +100,11 @@
 }
 .main-content .content #brand {
   font-size: 5rem;
+}
+@media (max-width: 576px) {
+  .main-content .content #brand {
+    font-size: 2rem;
+  }
 }
 .main-content .content button {
   padding: 10px 50px 10px 50px;
