--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: rgb(56, 56, 56) !important;
+}
+
 .main-content {
   width: 100%;
   height: 130vh;
@@ -59,7 +63,8 @@
   display: none;
 }
 @media (max-width: 992px) {
-  .main-content header .menu-bar .links, .main-content header .menu-bar .action-btn {
+  .main-content header .menu-bar .links,
+  .main-content header .menu-bar .action-btn {
     display: none;
   }
   .main-content header .menu-bar .toggle-btn {
@@ -92,6 +97,9 @@
   align-items: center;
   justify-content: center;
 }
+.main-content header .open {
+  height: 240px !important;
+}
 .main-content .content {
   height: 110vh;
   color: white;
@@ -123,7 +131,41 @@
 .main-content .product img {
   width: 100%;
 }
-
-.open {
-  height: 240px !important;
+.main-content .exercise .train {
+  height: 85vh;
+  background: url("../medias/sport1.avif");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: #fff;
+}
+.main-content .exercise .train img {
+  width: 70px;
+}
+.main-content .exercise .gradient {
+  height: 85vh;
+  background: url("../medias/gradient.webp");
+}
+@media (max-width: 768px) {
+  .main-content .exercise .gradient {
+    height: 60vh;
+  }
+  .main-content .exercise .train {
+    height: 60vh;
+    background-size: cover;
+  }
+}
+.main-content .exercise img {
+  width: 350px;
+  height: 479px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: 50% 50%;
+     object-position: 50% 50%;
+}
+@media (max-width: 768px) {
+  .main-content .exercise img {
+    width: 250px;
+    height: 379px;
+  }
 }/*# sourceMappingURL=style.css.map */
