--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,140 +1,178 @@
-$font: HelveticaNeue,Helvetica Neue,helvetica,Sans-Serif;
-$color: rgba(125,43,196,1);
+$font: HelveticaNeue, Helvetica Neue, helvetica, Sans-Serif;
+$color: rgba(125, 43, 196, 1);
+$background: rgb(56, 56, 56);
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.main-content{
-    width: 100% ;
-    height: 130vh;
-    background-image: url(../medias/gradient.webp);
-    background-size: cover;
+body {
+  background-color: $background !important;
+}
+.main-content {
+  width: 100%;
+  height: 130vh;
+  background-image: url(../medias/gradient.webp);
+  background-size: cover;
+  @media (max-width: 768px) {
+    & {
+      height: 150vh;
+    }
+  }
+  li {
+    list-style: none;
+    a:hover {
+      color: $color;
+    }
+  }
+  a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1rem;
+    font-family: $font;
+    i {
+      color: #fff;
+      font-size: 25px;
+    }
+  }
+  header {
+    position: relative;
+    padding: 0 2 rem;
+    .menu-bar {
+      width: 100%;
+      height: 60px;
+      max-width: 1200px;
+      margin: 0 auto;
+      .logo {
+        font-size: 1.5rem;
+        a {
+          font-size: 25px;
+          font-family: $font;
+        }
+      }
+      .links ul {
+        display: flex;
+        gap: 2rem;
+      }
+      .toggle-btn {
+        color: #fff;
+        font-size: 1.5rem;
+        cursor: pointer;
+        display: none;
+      }
+      @media (max-width: 992px) {
+        .links,
+        .action-btn {
+          display: none;
+        }
+        .toggle-btn {
+          display: block;
+        }
+        .dropdown_menu {
+          display: block;
+        }
+      }
+      @media (max-width: 576px) {
+        .dropdown_menu {
+          left: 2rem;
+          width: unset;
+        }
+      }
+    }
+    .dropdown_menu {
+      position: absolute;
+      right: 2rem;
+      top: 60px;
+      width: 300px;
+      overflow: hidden;
+      height: 0;
+      transition: height 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      background-color: rgb(48, 48, 48);
+      border-radius: 10px;
+      li {
+        padding: 0.7rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+    .open {
+      height: 240px !important;
+    }
+  }
+  .content {
+    height: 110vh;
+    color: white;
+    font-family: "Nanum Gothic", sans-serif;
+    font-family: "Raleway", sans-serif;
+    #brand {
+      font-size: 5rem;
+      @media (max-width: 576px) {
+        & {
+          font-size: 2rem;
+        }
+      }
+    }
+    button {
+      padding: 10px 50px 10px 50px;
+    }
+  }
+
+  .action-btn {
+    background-color: $color;
+    border-radius: 30px;
+    color: #fff;
+    padding: 5px 30px 5px 30px;
+    box-shadow: 2px 2px 15px 3px $color;
+
+    &:hover {
+      background-color: #fff;
+      color: black;
+    }
+  }
+  .product {
+    img {
+      width: 100%;
+    }
+  }
+
+  .exercise {
+    .train {
+      height: 85vh;
+      background: url("../medias/sport1.avif");
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      color: #fff;
+      img{
+        width: 70px;
+      }
+    }
+    .gradient {
+      height: 85vh;
+      background: url("../medias/gradient.webp");
+    }
     @media (max-width: 768px) {
+      .gradient {
+        height: 60vh;
+      }
+      .train {
+        height: 60vh;
+        background-size: cover;
+      }
+    }
+    img {
+      width: 350px;
+      height: 479px;
+      object-fit: contain;
+      object-position: 50% 50%;
+      @media (max-width: 768px) {
         &{
-            height: 150vh;
+          width: 250px;
+          height: 379px;
         }
+      }
     }
-    li{
-        list-style: none;
-        a:hover{
-            color: $color;
-        }
-        
-    }
-    a{
-        color: #fff;
-        text-decoration: none;
-        font-size: 1rem;
-        font-family: $font;
-        i{
-            color: #fff;
-            font-size: 25px;
-        }
-    }
-    header{
-        position: relative;
-        padding: 0 2 rem;
-        .menu-bar{
-            width: 100%;
-            height: 60px;
-            max-width: 1200px;
-            margin: 0 auto;
-            .logo{
-                font-size: 1.5rem;
-                a{
-                    font-size: 25px;
-                    font-family: $font;
-                }
-            }
-            .links ul{
-                display: flex;
-                gap: 2rem;
-            }
-            .toggle-btn{
-                color: #fff;
-                font-size: 1.5rem;
-                cursor: pointer;
-                display: none;
-            }
-            @media (max-width: 992px) {
-                .links, .action-btn{
-                    display: none;
-                }
-                .toggle-btn{
-                    display: block;
-                }
-                .dropdown_menu{
-                    display: block;
-                }
-            }
-            @media (max-width: 576px) {
-                .dropdown_menu{
-                    left: 2rem;
-                    width: unset;
-                }
-            }
-
-        }
-        .dropdown_menu{
-            position: absolute;
-            right: 2rem;
-            top: 60px;
-            width: 300px;
-            overflow: hidden;
-            height: 0;
-            transition: height 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            background-color: rgb(48, 48, 48);
-            border-radius: 10px;
-            li{
-                padding: 0.7rem;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-        }
-        
-    }
-    .content{
-        height: 110vh;
-        color: white;
-        font-family: 'Nanum Gothic', sans-serif;
-        font-family: 'Raleway', sans-serif;
-        #brand{
-            font-size: 5rem;
-            @media (max-width: 576px) {
-                &{
-                    font-size: 2rem;                    
-                }
-            }
-        }
-        button{
-            padding: 10px 50px 10px 50px;        }
-    }
-    
-    .action-btn{
-        background-color: $color ;
-        border-radius: 30px;
-        color: #fff;
-        padding: 5px 30px 5px 30px;
-        box-shadow: 2px 2px 15px 3px $color;
-        
-        &:hover{
-            background-color: #fff;
-            color: black;
-        }
-
-    }
-    .product{
-        img{
-            width: 100%;
-        }
-    }
-    
-   
-
-}
-.open{
-    height: 240px !important;
+  }
 }
