--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -149,6 +149,7 @@ body {
       .train {
         height: 80vh;
         background-size: cover;
+        background-repeat: no-repeat;
         h1 {
           font-size: 2rem;
         }
