--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -140,6 +140,8 @@ body {
   .exercise {
     .train {
       background: url("../medias/sport1.avif");
+      background-position: center;
+      opacity: 0.5;
     }
 
     @media (max-width: 768px) {
@@ -250,5 +252,12 @@ body {
         }
       }
     }
+  }
+  .w-system{
+    height: 95vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: #fff;
   }
 }
