--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,4 +253,27 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   color: #fff;
+}
+.main-content .t-feature {
+  background-image: url("../medias/gradient.webp");
+  background-position: center;
+  color: #fff;
+  text-align: center;
+}
+.main-content .t-feature h1 {
+  font-size: 4rem;
+}
+@media (max-width: 768px) {
+  .main-content .t-feature h1 {
+    font-size: 2rem;
+  }
+}
+.main-content .t-feature .animate-img {
+  opacity: 0;
+  animation-duration: 1.2s !important;
+}
+.main-content .t-feature .d {
+  width: 200px;
+  height: 200px;
+  background-color: aqua;
 }/*# sourceMappingURL=style.css.map */
