--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,6 +277,11 @@ body {
   top: 30%;
   z-index: 1;
 }
+@media (max-width: 768px) {
+  .main-content .t-feature .box-container {
+    position: inherit !important;
+  }
+}
 .main-content .t-feature .box {
   opacity: 0;
   border-radius: 10px;
@@ -284,4 +289,16 @@ body {
 }
 .main-content .t-feature .action-btn {
   padding: 10px 55px 10px 55px;
+}
+.main-content .card-container .card-section .card-image {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  opacity: 0.5;
+}
+.main-content .card-container .card-section .card-info {
+  color: #fff;
+  position: absolute;
+  z-index: 1;
 }/*# sourceMappingURL=style.css.map */
