--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -282,6 +282,11 @@ body {
       position: absolute;
       top: 30%;
       z-index: 1;
+      @media (max-width: 768px) {
+        & {
+          position: inherit !important;
+        }
+      }
     }
     .box{
       opacity: 0;
@@ -291,5 +296,21 @@ body {
     .action-btn{
       padding: 10px 55px 10px 55px;
     }
+  }
+  .card-container{
+    .card-section{
+      .card-image{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        opacity: 0.5;
+      }
+      .card-info{
+        color: #fff;
+        position: absolute;
+        z-index: 1;
+      }
+    }
+   
   }
 }
