--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -309,6 +309,9 @@ body {
         color: #fff;
         position: absolute;
         z-index: 1;
+        h6{
+          font-family: $font;
+        }
       }
     }
    
