--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,12 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
-  background-color: rgb(66, 66, 66) !important;
+  background-color: #424242 !important;
 }
 
 .main-content {
@@ -14,54 +15,68 @@ body {
   background-image: url(../medias/gradient.webp);
   background-size: cover;
 }
+
 @media (max-width: 768px) {
   .main-content {
     height: 150vh;
   }
 }
+
 .main-content li {
   list-style: none;
 }
+
 .main-content li a:hover {
-  color: rgb(125, 43, 196);
+  color: #7d2bc4;
 }
+
 .main-content a {
   color: #fff;
   text-decoration: none;
   font-size: 1rem;
   font-family: HelveticaNeue, Helvetica Neue, helvetica, Sans-Serif;
 }
+
 .main-content a i {
   color: #fff;
   font-size: 25px;
 }
+
 .main-content header {
   position: relative;
   padding: 0 2 rem;
 }
+
 .main-content header .menu-bar {
   width: 100%;
   height: 60px;
   max-width: 1200px;
   margin: 0 auto;
 }
+
 .main-content header .menu-bar .logo {
   font-size: 1.5rem;
 }
+
 .main-content header .menu-bar .logo a {
   font-size: 25px;
   font-family: HelveticaNeue, Helvetica Neue, helvetica, Sans-Serif;
 }
+
 .main-content header .menu-bar .links ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 2rem;
 }
+
 .main-content header .menu-bar .toggle-btn {
   color: #fff;
   font-size: 1.5rem;
   cursor: pointer;
   display: none;
 }
+
 @media (max-width: 992px) {
   .main-content header .menu-bar .links,
   .main-content header .menu-bar .action-btn {
@@ -74,12 +89,14 @@ body {
     display: block;
   }
 }
+
 @media (max-width: 576px) {
   .main-content header .menu-bar .dropdown_menu {
     left: 2rem;
     width: unset;
   }
 }
+
 .main-content header .dropdown_menu {
   position: absolute;
   right: 2rem;
@@ -87,55 +104,74 @@ body {
   width: 300px;
   overflow: hidden;
   height: 0;
+  -webkit-transition: height 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   transition: height 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  background-color: rgb(48, 48, 48);
+  background-color: #303030;
   border-radius: 10px;
 }
+
 .main-content header .dropdown_menu li {
   padding: 0.7rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
+
 .main-content header .open {
   height: 240px !important;
 }
+
 .main-content .content {
   height: 110vh;
   color: white;
   font-family: "Nanum Gothic", sans-serif;
   font-family: "Raleway", sans-serif;
 }
+
 .main-content .content #brand {
   font-size: 5rem;
 }
+
 @media (max-width: 576px) {
   .main-content .content #brand {
     font-size: 2rem;
   }
 }
+
 .main-content .content button {
   padding: 10px 50px 10px 50px;
 }
+
 .main-content .action-btn {
-  background-color: rgb(125, 43, 196);
+  background-color: #7d2bc4;
   border-radius: 30px;
   color: #fff;
   padding: 5px 30px 5px 30px;
-  box-shadow: 2px 2px 15px 3px rgb(125, 43, 196);
+  -webkit-box-shadow: 2px 2px 15px 3px #7d2bc4;
+          box-shadow: 2px 2px 15px 3px #7d2bc4;
 }
+
 .main-content .action-btn:hover {
   background-color: #fff;
   color: black;
 }
+
 .main-content .product img {
   width: 100%;
 }
+
 .main-content .exercise .train {
   background: url("../medias/sport1.avif");
   background-position: center;
   opacity: 0.5;
 }
+
 @media (max-width: 768px) {
   .main-content .exercise .gradient {
     height: 60vh;
@@ -149,6 +185,7 @@ body {
     font-size: 2rem;
   }
 }
+
 .main-content .exercise img {
   width: 350px;
   height: 479px;
@@ -157,16 +194,19 @@ body {
   -o-object-position: 50% 50%;
      object-position: 50% 50%;
 }
+
 @media (max-width: 768px) {
   .main-content .exercise img {
     width: 250px;
     height: 379px;
   }
 }
+
 .main-content .gradient {
   height: 85vh;
   background: url("../medias/gradient.webp");
 }
+
 .main-content .gradient img {
   width: 350px;
   height: 479px;
@@ -175,12 +215,14 @@ body {
   -o-object-position: 50% 50%;
      object-position: 50% 50%;
 }
+
 @media (max-width: 768px) {
   .main-content .gradient img {
     width: 250px;
     height: 379px;
   }
 }
+
 .main-content .background {
   height: 85vh;
   background-size: contain;
@@ -188,51 +230,69 @@ body {
   background-repeat: no-repeat;
   color: #fff;
 }
+
 .main-content .background img {
   width: 70px;
   height: 70px;
 }
+
 .main-content .background h1 {
   font-size: 3rem;
   line-height: 1.2em;
   font-weight: 400;
 }
+
 .main-content .background span {
   letter-spacing: 5px;
 }
+
 @media (max-width: 768px) {
   .main-content .background span {
     letter-spacing: 0;
   }
 }
+
 .main-content .notification .n-system {
-  background-color: rgb(74, 74, 74);
+  background-color: #4a4a4a;
 }
+
 .main-content .notification .row {
-  flex-direction: row-reverse;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
 }
+
 @media (max-width: 768px) {
   .main-content .notification .row {
-    flex-direction: initial;
+    -webkit-box-orient: initial;
+    -webkit-box-direction: initial;
+        -ms-flex-direction: initial;
+            flex-direction: initial;
   }
 }
+
 .main-content .bracelets {
   color: #fff;
   font-family: HelveticaNeue, Helvetica Neue, helvetica, Sans-Serif;
   text-align: center;
 }
+
 .main-content .bracelets h1 {
   font-size: 3.5rem;
 }
+
 @media (max-width: 768px) {
   .main-content .bracelets h1 {
     font-size: 2rem;
   }
 }
+
 .main-content .bracelets img {
   width: 70px;
   height: 70px;
 }
+
 .main-content .bracelets .products {
   width: 953px;
   height: 694px;
@@ -241,12 +301,14 @@ body {
   -o-object-position: 50% 50%;
      object-position: 50% 50%;
 }
+
 @media (max-width: 768px) {
   .main-content .bracelets .products {
     width: 298px;
     height: 216px;
   }
 }
+
 .main-content .w-system {
   height: 95vh;
   background-size: cover;
@@ -254,6 +316,7 @@ body {
   background-position: center;
   color: #fff;
 }
+
 .main-content .t-feature {
   background-image: url("../medias/gradient.webp");
   background-position: center;
@@ -261,35 +324,43 @@ body {
   position: relative;
   text-align: center;
 }
+
 .main-content .t-feature h1 {
   font-size: 4rem;
 }
+
 @media (max-width: 768px) {
   .main-content .t-feature h1 {
     font-size: 2rem;
   }
 }
+
 .main-content .t-feature .animate-img {
   opacity: 0;
 }
+
 .main-content .t-feature .box-container {
   position: absolute;
   top: 30%;
   z-index: 1;
 }
+
 @media (max-width: 768px) {
   .main-content .t-feature .box-container {
     position: inherit !important;
   }
 }
+
 .main-content .t-feature .box {
   opacity: 0;
   border-radius: 10px;
-  background-color: rgb(47, 47, 47);
+  background-color: #2f2f2f;
 }
+
 .main-content .t-feature .action-btn {
   padding: 10px 55px 10px 55px;
 }
+
 .main-content .card-container .card-section .card-image {
   width: 100%;
   height: 100%;
@@ -297,11 +368,56 @@ body {
      object-fit: contain;
   opacity: 0.5;
 }
+
 .main-content .card-container .card-section .card-info {
   color: #fff;
   position: absolute;
   z-index: 1;
 }
+
 .main-content .card-container .card-section .card-info h6 {
   font-family: HelveticaNeue, Helvetica Neue, helvetica, Sans-Serif;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.main-content .buy-trackmate {
+  color: #fff;
+  font-family: HelveticaNeue, Helvetica Neue, helvetica, Sans-Serif;
+}
+
+.main-content .buy-trackmate h6 {
+  letter-spacing: 0.2em;
+}
+
+.main-content .buy-trackmate .bracelet-img {
+  width: 876px;
+  height: 420px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 50%;
+     object-position: 50% 50%;
+}
+
+@media (max-width: 768px) {
+  .main-content .buy-trackmate .bracelet-img {
+    width: 280px;
+    height: 150px;
+  }
+}
+
+.main-content .buy-trackmate .action-btn {
+  padding: 10px 55px 10px 55px;
+}
+
+.main-content .subscribe h1 {
+  color: #fff;
+  line-height: 1.2em;
+  text-align: center;
+  font-size: 50px;
+}
+
+@media (max-width: 768px) {
+  .main-content .subscribe h1 {
+    font-size: 22px;
+  }
+}
+/*# sourceMappingURL=style.css.map */
