--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -255,10 +255,12 @@ body {
     }
   }
   .w-system{
-    height: 95vh;
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-image: url("../medias/fachry-zella-devandra-Yta-zdP9PVM-unsplash.jpg");
+    min-height: 95vh;
+    background-attachment: fixed;
     background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     color: #fff;
   }
   .t-feature{
